# eskalate-ml-interview-solution

./: README.md  main.ipynb  pyproject.toml  report.docx  todos.txt  ~$report.docx
summaries/: category_count.csv
